--- a/SysSpy.Core/SysSpy.Core.csproj
+++ b/SysSpy.Core/SysSpy.Core.csproj
@@ -44,6 +44,7 @@
     <Compile Include="SystemElementsCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemElements\Certificate.cs" />
+    <Compile Include="SystemElements\COMPlusComponent.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
