--- a/SysSpy.Core/SysSpy.Core.csproj
+++ b/SysSpy.Core/SysSpy.Core.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -45,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemElements\Certificate.cs" />
     <Compile Include="SystemElements\COMPlusComponent.cs" />
+    <Compile Include="SystemElements\Driver.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
