--- a/SysSpy.Snapshots/SysSpy.Snapshots.csproj
+++ b/SysSpy.Snapshots/SysSpy.Snapshots.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8B64866A-3890-4D37-BFAD-67054BBD1342}</ProjectGuid>
+    <ProjectGuid>{05FA21CC-1F82-4979-8161-1CA9B8B909AE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SysSpy.Core</RootNamespace>
-    <AssemblyName>SysSpy.Core</AssemblyName>
+    <RootNamespace>SysSpy.Snapshots</RootNamespace>
+    <AssemblyName>SysSpy.Snapshots</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -33,23 +33,21 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\CertificateRoot.cs" />
-    <Compile Include="Enums\Hive.cs" />
-    <Compile Include="Collectors\CertificatesCollector.cs" />
-    <Compile Include="Interfaces\ISystemElementsCollector.cs" />
-    <Compile Include="SystemElementsCollection.cs" />
+    <Compile Include="Snapshot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SystemElements\Certificate.cs" />
-    <Compile Include="SystemElements\COMPlusComponent.cs" />
-    <Compile Include="SystemElements\Driver.cs" />
-    <Compile Include="SystemElements\SystemElement.cs" />
+    <Compile Include="SnapshotsFactory.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SysSpy.Core\SysSpy.Core.csproj">
+      <Project>{8b64866a-3890-4d37-bfad-67054bbd1342}</Project>
+      <Name>SysSpy.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
