--- a/SysSpy.Models/SysSpy.Models.csproj
+++ b/SysSpy.Models/SysSpy.Models.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{67B37B01-E38E-456A-920D-51A0CC25C5C4}</ProjectGuid>
+    <ProjectGuid>{8B64866A-3890-4D37-BFAD-67054BBD1342}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SysSpy.Core</RootNamespace>
-    <AssemblyName>SysSpy.Core</AssemblyName>
+    <RootNamespace>SysSpy.Models</RootNamespace>
+    <AssemblyName>SysSpy.Models</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,15 +32,26 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Scanner.cs" />
+    <Compile Include="Enums\CertificateRoot.cs" />
+    <Compile Include="Enums\Hive.cs" />
+    <Compile Include="Collectors\CertificatesCollector.cs" />
+    <Compile Include="Interfaces\ISystemElementsCollector.cs" />
+    <Compile Include="SystemElementsCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemElements\Certificate.cs" />
+    <Compile Include="SystemElements\COMPlusComponent.cs" />
+    <Compile Include="SystemElements\Driver.cs" />
+    <Compile Include="SystemElements\SystemElement.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
