--- a/SysSpy.Desktop/SysSpy.Desktop.csproj
+++ b/SysSpy.Desktop/SysSpy.Desktop.csproj
@@ -65,7 +65,9 @@
     <Compile Include="Controls\TakeSnapshotElements.xaml.cs">
       <DependentUpon>TakeSnapshotElements.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converters\BoolToButtonImageConverter.cs" />
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
+    <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModels\ElementsInfoViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\ScanningControlViewModel.cs" />
@@ -150,6 +152,10 @@
       <Project>{05FA21CC-1F82-4979-8161-1CA9B8B909AE}</Project>
       <Name>SysSpy.Snapshots</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Pause.png" />
+    <Resource Include="Images\Play.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
